Rewrite most of the code from scratch